fix: avoiding IndexOutOfBoundsException